add two album endpoints
